[project]
name = "stratify-data-api"
version = "0.1.0"
description = "A REST API for accessing stock market data powered by Yahoo Finance and Stooq."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
