[project]
name = "stratify-data-api"
version = "0.1.0"
description = "A REST API for accessing stock market data powered by Yahoo Finance and Stooq."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "yfinance>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
addopts = "-ra -q --import-mode=importlib"
python_files = "*test.py"
env = [
    "SERVER_PORT=2200",
]

[tool.coverage.report]
omit = [
    "**/*/__init__.py",
    "src/config.py",
    "src/generate_openapi_spec.py",
    "src/tests/**/*",
    "*_test.py",
    "src/routes/routes.py",
    "*schema.py"
]
skip_empty = true
show_missing = true
precision = 2
